--- a/src/test/resources/test-html.html
+++ b/src/test/resources/test-html.html
@@ -35,7 +35,7 @@ div.header {
 div.footer {
     margin-top: 0.5cm;
     display: block;
-    position: running(footer);
+    position: running(footer);r
     border-top: 1px solid black;
     background: #eee;
 }
