page styling changed to a4 landscape - renders fine but edges cropped when printed at 100%

--- a/plate.html
+++ b/plate.html
@@ -12,7 +12,7 @@
 
 <div class="separatePage">
     <table>
-        <td class="table-half">
+        <td class='table-half'>
             <table class="vtg7">
                 <tbody>
                 <tr>
@@ -700,11 +700,9 @@
                 </tbody>
             </table>
         </td>
-
-        <td class="gap">
+        <td class='gap'>
         </td>
-
-        <td class="table-half">
+        <td class='table-half'>
             <table class="vtg6">
                 <tbody>
                 <tr>
@@ -1274,8 +1272,8 @@
 
 <div class="separatePage">
     <table>
-        <td class="table-half">
-            <div class="vtg6 notes">
+        <td class='table-half'>
+            <div class="vtg6_secondPage">
                 <p class="vtg6_display">
                     DISPLAY OF MINISTRY PLATE
                 </p>
@@ -1326,12 +1324,9 @@
                 </div>
             </div>
         </td>
-
-        <td class="gap">
-        </td>
-
-        <td class="table-half">
-            <div class="vtg7 notes">
+        <td class="gap"></td>
+        <td class='table-half'>
+            <div class="secondPage">
                 <p class="notes_title">NOTES</p>
                 <p><strong>PLATED WEIGHTS</strong></p>
                 <ol>
